--- a/style.css
+++ b/style.css
@@ -48,12 +48,20 @@ h1 {
 }
 div.testArea {
     display: inline-block;
-    width: 14em;
-    height: 9em;
+    width: 16em;
+    height: 12.5em;
     position: relative;
     box-sizing: border-box;
 }
-div.testName {
+div.testArea2 {
+    display: inline-block;
+    width: 14em;
+    height: 7em;
+    position: relative;
+    box-sizing: border-box;
+    text-align: center;
+}
+div.testArea div.testName {
     position: absolute;
     top: 0.1em;
     left: 0;
@@ -61,49 +69,50 @@ div.testName {
     font-size: 1.4em;
     z-index: 9;
 }
-div.meterText {
+div.testArea2 div.testName {
+    display: block;
+    text-align: center;
+    font-size: 1.4em;
+}
+div.testArea div.meterText {
     position: absolute;
-    bottom: 1.5em;
+    bottom: 1.55em;
     left: 0;
     width: 100%;
     font-size: 2.5em;
     z-index: 9;
 }
-#dlText {
-    color: #6060aa;
-}
-#ulText {
-    color: #309030;
-}
-#pingText,
-#jitText {
-    color: #aa6060;
+div.testArea2 div.meterText {
+    display: inline-block;
+    font-size: 2.5em;
 }
 div.meterText:empty:before {
-    color: #505050 !important;
     content: "0.00";
 }
-div.unit {
+div.testArea div.unit {
     position: absolute;
     bottom: 2em;
     left: 0;
     width: 100%;
     z-index: 9;
 }
-div.testGroup {
+div.testArea2 div.unit {
     display: inline-block;
 }
-@media all and (max-width: 65em) {
-    body {
-        font-size: 1.5vw;
-    }
+div.testArea canvas {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+}
+div.testGroup {
+    display: block;
+    margin: 0 auto;
 }
 @media all and (max-width: 40em) {
     body {
         font-size: 0.8em;
-    }
-    div.testGroup {
-        display: block;
-        margin: 0 auto;
     }
 }
