--- a/style.css
+++ b/style.css
@@ -1,118 +1,164 @@
+:root {
+  --background-color-primary: rgba(51, 51, 51);
+  --font-color-primary: #fff;
+  --color-primary: #fff;
+  --color-secondary: #2ece2e;
+  --font-family-primary: "Helvetica";
+  --meter-fill-color: #8f60aa;
+  --meter-fill-color-secondary: #f77230;
+}
+
 html,
 body {
-    border: none;
-    padding: 0;
-    margin: 0;
-    background: #ffffff;
-    color: #202020;
+  border: none;
+  padding: 0;
+  margin: 0;
+  background: var(--background-color-primary);
+  color: var(--font-color-primary);
 }
+
 body {
-    text-align: center;
-    font-family: "Roboto", sans-serif;
+  text-align: center;
+  font-family: var(--font-family-primary);
 }
-h1 {
-    color: #404040;
-}
+
 #startStopBtn {
-    display: inline-block;
-    margin: 0 auto;
-    color: #6060aa;
-    background-color: rgba(0, 0, 0, 0);
-    border: 0.15em solid #6060ff;
-    border-radius: 0.3em;
-    transition: all 0.3s;
-    box-sizing: border-box;
-    width: 8em;
-    height: 3em;
-    line-height: 2.7em;
-    cursor: pointer;
-    box-shadow: 0 0 0 rgba(0, 0, 0, 0.1), inset 0 0 0 rgba(0, 0, 0, 0.1);
+  text-transform: uppercase;
+  margin: 0 auto;
+  color: var(--font-color-primary);
+  background-color: var(--color-secondary);
+  border-radius: 0.3em;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  width: 8em;
+  height: 3em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  cursor: pointer;
+  -webkit-box-shadow: 0 0 0 rgba(0, 0, 0, 0.1), inset 0 0 0 rgba(0, 0, 0, 0.1);
+          box-shadow: 0 0 0 rgba(0, 0, 0, 0.1), inset 0 0 0 rgba(0, 0, 0, 0.1);
 }
+
 #startStopBtn:hover {
-    box-shadow: 0 0 2em rgba(0, 0, 0, 0.1), inset 0 0 1em rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 0 0 2em rgba(0, 0, 0, 0.1), inset 0 0 1em rgba(0, 0, 0, 0.1);
+          box-shadow: 0 0 2em rgba(0, 0, 0, 0.1), inset 0 0 1em rgba(0, 0, 0, 0.1);
 }
+
 #startStopBtn.running {
-    background-color: #ff3030;
-    border-color: #ff6060;
-    color: #ffffff;
+  background-color: #ff3030;
+  border-color: #ff6060;
+  color: #ffffff;
 }
+
 #startStopBtn:before {
-    content: "Start";
+  content: "Start";
 }
+
 #startStopBtn.running:before {
-    content: "Abort";
+  content: "Stop";
 }
+
 #test {
-    margin-top: 2em;
-    margin-bottom: 12em;
+  margin-top: 2em;
+  margin-bottom: 12em;
 }
-div.testArea {
-    display: inline-block;
-    width: 16em;
-    height: 12.5em;
-    position: relative;
-    box-sizing: border-box;
+
+.testArea {
+  text-transform: uppercase;
+  display: inline-block;
+  width: 16em;
+  height: 12.5em;
+  position: relative;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
-div.testArea2 {
-    display: inline-block;
-    width: 14em;
-    height: 7em;
-    position: relative;
-    box-sizing: border-box;
-    text-align: center;
+
+.testArea2 {
+  text-transform: uppercase;
+  display: inline-block;
+  width: 14em;
+  height: 7em;
+  position: relative;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  text-align: center;
 }
-div.testArea div.testName {
-    position: absolute;
-    top: 0.1em;
-    left: 0;
-    width: 100%;
-    font-size: 1.4em;
-    z-index: 9;
+
+.testArea .testName {
+  position: absolute;
+  top: 0.1em;
+  left: 0;
+  width: 100%;
+  font-size: 1.4em;
+  z-index: 9;
 }
-div.testArea2 div.testName {
-    display: block;
-    text-align: center;
-    font-size: 1.4em;
+
+.testArea2 .testName {
+  display: block;
+  text-align: center;
+  font-size: 1.4em;
 }
-div.testArea div.meterText {
-    position: absolute;
-    bottom: 1.55em;
-    left: 0;
-    width: 100%;
-    font-size: 2.5em;
-    z-index: 9;
+
+.testArea .meterText {
+  position: absolute;
+  bottom: 1.55em;
+  left: 0;
+  width: 100%;
+  font-size: 2.5em;
+  z-index: 9;
 }
-div.testArea2 div.meterText {
-    display: inline-block;
-    font-size: 2.5em;
+
+.testArea2 .meterText {
+  display: inline-block;
+  font-size: 2.5em;
 }
-div.meterText:empty:before {
-    content: "0.00";
+
+.meterText:empty:before {
+  content: "0";
 }
-div.testArea div.unit {
-    position: absolute;
-    bottom: 2em;
-    left: 0;
-    width: 100%;
-    z-index: 9;
+
+.secondary {
+  color: var(--font-color-secondary);
 }
-div.testArea2 div.unit {
-    display: inline-block;
+
+.testArea .unit {
+  position: absolute;
+  bottom: 2em;
+  left: 0;
+  width: 100%;
+  z-index: 9;
 }
-div.testArea canvas {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
+
+.testArea2 .unit {
+  display: inline-block;
 }
-div.testGroup {
-    display: block;
-    margin: 0 auto;
+
+.testArea canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
 }
+
+.testGroup {
+  display: block;
+  margin: 0 auto;
+}
+
 @media all and (max-width: 40em) {
-    body {
-        font-size: 0.8em;
-    }
+  body {
+    font-size: 0.8em;
+  }
 }
+/*# sourceMappingURL=style.css.map */
