--- a/style.css
+++ b/style.css
@@ -156,6 +156,10 @@ body {
   margin: 0 auto;
 }
 
+#ipArea {
+  margin: 2em;
+}
+
 @media all and (max-width: 40em) {
   body {
     font-size: 0.8em;
