--- a/style.css
+++ b/style.css
@@ -67,9 +67,21 @@ body {
   content: "Stop";
 }
 
-#test {
-  margin-top: 2em;
-  margin-bottom: 12em;
+#testWrapper {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  margin: 5rem;
 }
 
 .testArea {
