--- a/style.css
+++ b/style.css
@@ -188,6 +188,13 @@ body {
   font-size: 2.5em;
 }
 
+.testArea2 .meterText #ip {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  width: 100%;
+  text-align: left;
+}
+
 .meterText:empty:before {
   content: "0";
 }
