Won't work with the iframe, but oh well...

--- a/style.css
+++ b/style.css
@@ -240,7 +240,7 @@ body {
   transition: all cubic-bezier(0.09, 0.91, 0.5, 1.1) 500ms;
 }
 
-@media all and (max-width: 80em) {
+@media all and (max-width: 1400px) {
   html,
   body {
     font-size: 0.9em;
@@ -251,7 +251,7 @@ body {
   }
 }
 
-@media all and (max-width: 60em) {
+@media all and (max-width: 768px) {
   html,
   body {
     font-size: 0.6em;
@@ -259,6 +259,19 @@ body {
   .testGroup {
     margin: 0;
     padding: 0;
+  }
+  .testGroup .testArea2 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    padding: 0;
+    height: 75%;
   }
   .testArea {
     padding: 0;
