--- a/style.scss
+++ b/style.scss
@@ -155,8 +155,6 @@ body {
     position: relative;
 }
 .testArea .testName {
-    position: absolute;
-    top: 0.1em;
     left: 0;
     width: 100%;
     font-size: 2em;
@@ -259,6 +257,15 @@ body {
             margin: 0;
             padding: 0;
             height: 50%;
+            font-size: 1em;
+
+            .meterText {
+                font-size: 1.5em;
+            }
+        }
+
+        #ipArea {
+            margin: auto 0;
         }
     }
 
