--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
   --color-primary: #fff;
   --color-secondary: #34c83c;
   --color-secondary-dark: #2ead34;
-  --font-family-primary: "Helvetica";
+  --font-family-primary: verdana, geneva, sans-serif;
   --meter-fill-color: #8f60aa;
   --meter-fill-color-secondary: #f77230;
   --meter-fill-color-secondary-dark: #d1622b;
@@ -24,16 +24,14 @@ body {
 }
 
 .outer-content {
-  background: -webkit-gradient(linear, left top, right top, from(var(--meter-fill-color)), to(var(--meter-fill-color-secondary)));
-  background: linear-gradient(to right, var(--meter-fill-color), var(--meter-fill-color-secondary));
-  padding: 0.2em;
+  padding: 0;
   margin: 0;
   height: 100%;
+  background: var(--background-color-primary);
 }
 
 .main-content {
   height: 100%;
-  border-radius: 0.3em;
   position: relative;
   padding: 0;
   background: var(--background-color-primary);
@@ -125,17 +123,10 @@ body {
 }
 
 #startStopBtn {
-  text-transform: uppercase;
   margin: auto;
-  margin-bottom: 1em;
-  color: black;
-  background-color: var(--color-secondary);
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
   width: 10em;
   height: 2.5em;
+  font-weight: normal;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -145,15 +136,10 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  font-size: 2em;
-  border-bottom: solid 5px var(--color-secondary-dark);
-  border-radius: 0.3em;
-  cursor: pointer;
 }
 
 #startStopBtn.running {
   background-color: var(--ncsu-red);
-  border-bottom: solid 5px var(--ncsu-red-dark);
 }
 
 #startStopBtn:active {
@@ -169,8 +155,8 @@ body {
   height: var(--gauge-height);
   position: relative;
   border-radius: 0.3em;
-  -webkit-box-shadow: -10px 25px 50px rgba(0, 0, 0, 0.3);
-          box-shadow: -10px 25px 50px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: -10px 20px 50px rgba(0, 0, 0, 0.3);
+          box-shadow: -10px 20px 50px rgba(0, 0, 0, 0.3);
 }
 
 .testArea .testName {
@@ -188,6 +174,7 @@ body {
 }
 
 .testArea .unit {
+  text-transform: capitalize;
   position: absolute;
   bottom: 5em;
   left: 0;
@@ -229,6 +216,7 @@ body {
 }
 
 .testArea2 .unit {
+  text-transform: lowercase;
   display: inline-block;
   margin: 0;
   padding: 0;
@@ -327,5 +315,16 @@ body {
     width: calc(var(--gauge-width) / 1.4);
     height: calc(var(--gauge-height) / 1.4);
   }
+}
+
+.qualtrics-btn {
+  color: black;
+  font-size: 20px;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
+  text-align: center;
+  background-color: #2ece2e;
 }
 /*# sourceMappingURL=style.css.map */
